--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,11 @@ ORACLE_USER=COMP214_F25_ERS_33
 ORACLE_PASSWORD=password
 ORACLE_CONNECT_STRING=199.212.26.208:1521/SQLD
 PORT=1521
+
+
+
+# At centennial connection :  oracle1.centennialcollege.ca 
+# Remote DB : 199.212.26.208
+
+
+
