--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "oracledb": "^6.3.0"
-  }
+  },
+  "description": "Project",
+  "devDependencies": {},
+  "author": "Mehmet Celal Suoglu",
+  "license": "ISC"
 }
-
